# the-lost-metropolis

./: .env  .firebaserc  .gitignore  .parcelrc  .pdm-python  .pdm.toml  .postcssrc  README.md  development.md  findfont.js  firebase.json  index.html  installation.json  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  test_scene.json  tsconfig.json  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.parcel-cache/: 0039aa8616b75921  48f4406da3cbeedf.txt  b230b85fb8597f12  c8562a28d6c3b245  lock.mdb
api/: behaviour.txt  types.ts  utilities.ts  utility_types.ts
api/implementation_types/: PostDocData.ts  Role.ts
api/types/: Asset.ts  AssetLiteral.ts  AssetZipMetadata.ts  CameraProps.ts  Color.ts  ComponentLiteral.ts  ComponentProps.ts  (+16 more)
api2/: types.ts
api_old/: behaviour.txt  defaults.ts  implementation_types.ts  types.ts
certs/: certificate.pem  private_key.pem
config/: webpack.config.js
controller/: base_controller.py  bell_detector.py  broadcaster.py  broadcaster2.py  controller.py  dmx.py  frequency_filter.py  generate_cert.py  scene_defs.py  scene_manager.py  sound_manager.py  ws_client.py  ws_server.py  wss_client.py  wss_server.py
firebase/: firestore.rules
functions/: index.js  package-lock.json  package.json  tsconfig.json
patches/: three+0.141.0.patch
public/: index.html
scripts/: open_browser.js
src/: App.js  LoremIpsum.js  api.js  api.ts  custom.d.ts  development.md  firebase-config.js  index.css  index.html  index.js  index.tsx  types.ts  utilities.js  utilities.ts  utilities.tsx
(+274 files in other folders)
