[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Heng", email = "31088159+shiukaheng@users.noreply.github.com"},
]
dependencies = [
    "pyaudio>=0.2.13",
    "numpy>=1.25.2",
    "scipy>=1.9.3",
    "matplotlib>=3.8.0",
    "websockets>=11.0.3",
    "cryptography>=41.0.3",
    "serial>=0.0.97",
    "pygame>=2.5.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
